# settings-extension-template

./: Cargo.toml  README.md  cargo-generate.toml  setting-name.rhai
src/: lib.rs  main.rs
